adds dev package and updates scripts

--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "wrangler": "npx wrangler pages dev dist",
+    "wrangler:dev": "concurrently \"npm run build\" \"npm run wrangler\""
   },
   "dependencies": {
     "astro": "^5.1.5",
     "resend": "^4.0.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250109.0"
+    "@cloudflare/workers-types": "^4.20250109.0",
+    "concurrently": "^9.1.2"
   }
 }
