--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.3.0",
     "astro": "^5.1.5",
+    "astro-seo": "^0.8.4",
     "resend": "^4.0.1",
     "tinacms": "^2.6.0"
   },
